# homm1extract

./: .gitignore  KB.MD  README.md  homm1_extract.py  kb_extract.py
cpp_version/: CMakeLists.txt  CMakeLists_unix.txt
cpp_version/src/: atk.cpp  atk.h  bkg.cpp  bkg.h  icn.cpp  icn.h  image.cpp  image.h  main.cpp  std.cpp  std.h  wav.cpp  wav.h
